Add client-side resources
Bootstrap and jQuery are now built into the project.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>spider web crawler</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
     <body>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <script src="app.js"></script>  
     </body>
 </html>
