Add a basic, non-functioning UI

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
         <meta charset="UTF-8">
         <title>spider web crawler</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
+        <form action="#" id="crawl-options">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Enter a URL">
+                <div class="input-group-btn">
+                    <button class="btn btn-success" type="button">Start</button>
+                </div>
+            </div>
+        </form>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="app.js"></script>  
