Use the UI to control the functionality

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <form action="#" id="crawl-options">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Enter a URL">
+                <input autofocus type="url" id="crawl-url" class="form-control" placeholder="Enter a URL">
                 <div class="input-group-btn">
-                    <button class="btn btn-success" type="button">Start</button>
+                    <button class="btn btn-success" type="button" id="crawl-begin">Start</button>
                 </div>
             </div>
         </form>
