Added a stop button to stop the crawler

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     <button class="btn btn-success" type="button" id="crawl-begin">Start</button>
                 </div>
             </div>
+            <button class="btn btn-danger" type="button" id="crawl-end">Stop</button>
         </form>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
