Start button gets replaced with stop button and vice-versa. -Incomplete

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
         <form action="#" id="crawl-options">
             <div class="input-group">
                 <input autofocus type="url" id="crawl-url" class="form-control" placeholder="Enter a URL">
-                <div class="input-group-btn">
-                    <button class="btn btn-success" type="button" id="crawl-begin">Start</button>
+                <div class="input-group-btn" id="btn-main">
                 </div>
             </div>
-            <button class="btn btn-danger" type="button" id="crawl-end">Stop</button>
         </form>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
