--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 </div>
             </div>
         </form>
+        <ul id="results">
+            
+        </ul>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="app.js"></script>  
