--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
                 </div>
             </div>
         </form>
+        <div id="stats">
+            <h3>Details of Current Request</h3>
+            <ul>
+                <li><strong>Queue Length: </strong> <span id="qlength">0</span></li>
+                <li><strong>Fetching Item: </strong><span id="fitem">0</span></li>
+                <li><strong>Items Downloaded: </strong><span id="ditems">0</span></li>
+                <li><strong>Items Redirected: </strong><span id="ritems">0</span></li>
+            </ul>
+        </div>
         <ul id="results">
             
         </ul>
