Add alert messages to show URL errors

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <div class="input-group-btn" id="btn-main">
                 </div>
             </div>
+            <div class="alert alert-danger hide" id="crawl-url-error">
+                <strong>Sure about that?</strong> Looks like the URL could use some fixing.
+            </div>
         </form>
         <div id="stats">
             <h3>Details of Current Request</h3>
